--- a/hp_test.html
+++ b/hp_test.html
@@ -1,1 +1,5 @@
-<script class="HPG_reserveScript" data-hpg-hpds-style="{'type': 'vertical', 'color': 'white'}" data-hpg-hpds-jcode="{'J001119440': 'null'}" charset="UTF-8" type="text/javascript" src="http://www.hotpepper.jp/doc/hpds/js/hpds_variable_pc.js"></script>
+<html>
+  <body>
+</html><script class="HPG_reserveScript" data-hpg-hpds-style="{'type': 'vertical', 'color': 'white'}" data-hpg-hpds-jcode="{'J001119440': 'null'}" charset="UTF-8" type="text/javascript" src="http://www.hotpepper.jp/doc/hpds/js/hpds_variable_pc.js"></script>
+</body>
+</html>
